# meta-genivi-ocf-demo

./: .cproject  .gitignore  .gitmodules  .project  README  tizen-manifest.xml  tizen.mk
Android/app/: build.gradle  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/openinterconnect/org/android/: DeviceDiscoveryClient.java  Light.java  LightServer.java  MainActivity.java  SimpleClient.java  SimpleServer.java
Android/app/src/main/res/layout/: activity_main.xml
Android/iotivity-base-armeabi-v7a-release/: iotivity-base-armeabi-v7a-release.aar
conf/: layer.conf
extra/: setup.sh
gateway/: CMakeLists.txt  README  clean-all.cmake  config.properties  run.sh
gateway/inc/: debugger.h  defines.h  gateway.h  properties.h
gateway/src/: debugger.cpp  gateway.cpp  ocfclient.cpp  ocfserver.cpp  properties.cpp  request.cpp  simpleclient.cpp  simpleserver.cpp
inc/: lbs-maps.h  main_view.h  place.h  revgeocode.h  route.h  route_view.h  search_view.h
recipes-apps/iotivity-example/: iotivitymap_git.bb
recipes-image/images/: demo-image.bb  genivi-ocf-demo-image.bb
res/edje/: mainview.edc
src/: client.cpp  lbs-maps.c  lbs-maps.cpp  logger.inl  main_view.cpp  observer.cpp  observer.h  place.c  place.cpp  revgeocode.c  revgeocode.cpp  route.c  route.cpp  route_view.cpp  search_view.c  search_view.cpp  util.c
